some cleanup and transcoding testscript... IPFS acts funky...

--- a/app/elements/ipfs-upload/ipfs-upload.html
+++ b/app/elements/ipfs-upload/ipfs-upload.html
@@ -11,8 +11,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/file-upload/file-upload.html">
 <link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
-<link rel="import" href="../../bower_components/ipfs-upload/ipfs-upload.html">
-
+<!-- <link rel="import" href="../../bower_components/ipfs-upload/ipfs-upload.html">
+ -->
 <dom-module id="ipfs-upload">
   <template>
     <style is="custom-style" include="shared-styles"></style>
