--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -9,8 +9,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <!-- Iron elements -->
-<link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<!-- <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+ --><link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/av-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
@@ -42,8 +42,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="stube-item/stube-item.html">
-<link rel="import" href="stube-player/stube-player.html">
+<link rel="import" href="./stube-item/stube-item.html">
+<link rel="import" href="./stube-player/stube-player.html">
 
 <link rel="import" href="stube-clip/stube-clip.html">
 <link rel="import" href="my-list/my-list.html">
