--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -51,3 +51,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="ipfs-upload/ipfs-upload.html">
 <link rel="import" href="comment-item/comment-item.html">
 <link rel="import" href="comment-input/comment-input.html">
+<link rel="import" href="stube-playlist/stube-playlist.html">
+<link rel="import" href="stube-newplaylist/stube-newplaylist.html">
