--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -20,8 +20,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.scrollPageToTop();
     });
 
-    page('/users', function () {
-      app.route = 'users';
+    page('/user', function () {
+      app.route = 'user';
+      app.scrollPageToTop();
+    });
+
+    page('/newplaylist', function () {
+      app.route = 'newplaylist';
       app.scrollPageToTop();
     });
 
