--- a/app/elements/stube-player/stube-player.html
+++ b/app/elements/stube-player/stube-player.html
@@ -38,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         hash: {
           type: String,
           //value: 'stube-player',
-          notify: true,
+          //notify: true,
           observer: "_hash"
         },
         videourl: {
@@ -49,7 +49,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       attached: function() {
-        console.log('hash=',this.hash);
+        //console.log('hash=',this.hash);
       },
 
       _hash: function(){
