--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- For shared styles, shared-styles.html import in elements.html -->
   <style is="custom-style" include="shared-styles"></style>
 
+  <script src="./vendor/ipfsapi.min.js"></script>
+
 </head>
 
 <body unresolved class="fullbleed layout vertical">
