--- a/app/index.html
+++ b/app/index.html
@@ -175,7 +175,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <section data-route="newplaylist">
             <paper-material elevation="1">
-            <stube-newplaylist web3="{{web3}}"></stube-newplaylist>
+            <stube-newplaylist account="{{account}}" web3="{{web3}}"></stube-newplaylist>
             </paper-material>
           </section>
 
