--- a/app/index.html
+++ b/app/index.html
@@ -183,8 +183,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
  <section data-route="user">
             <paper-material elevation="1">
-              <h2 class="page-title">User</h2>
-              <p>{{account}}</p>
+            <stube-user account="{{account}}" web3="{{web3}}" balance="{{balance}}"></stube-user>
             </paper-material>
           </section>
         </iron-pages>
