--- a/app/elements/stube-user/stube-user.html
+++ b/app/elements/stube-user/stube-user.html
@@ -44,6 +44,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _web3: function(){
         var web3wallet = document.getElementById('web3wallet');
         this.balance = web3wallet.updateBalance();
+        var accounts = this.web3.eth.accounts;
+console.log(accounts); // ["0x407d73d8a49eeb85d32cf465507dd71d507100c1"] 
       },
 
       getBTCoinBalance: function(){
