--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <section data-route="upload">
             <paper-material elevation="1">
-              <ipfs-upload></ipfs-upload>
+              <!-- <ipfs-upload></ipfs-upload> -->
             </paper-material>
           </section>
 
