nwe test video that finally works....

--- a/app/elements/stube-player/stube-player.html
+++ b/app/elements/stube-player/stube-player.html
@@ -34,7 +34,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       properties: {
         videohash: {
           type: String,
-          //value: 'stube-player',
+          //value: 'QmR8NyktETUYryjL3ZecAGJtSYPup9CJqihxyJVXcHuLBu',
           //notify: true,
           observer: "_hash"
         },
