--- a/app/elements/stube-newplaylist/stube-newplaylist.html
+++ b/app/elements/stube-newplaylist/stube-newplaylist.html
@@ -67,7 +67,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             var gasPrice = result.toNumber(10);
 
             var MyContract = self.web3.eth.contract(self.contractjson.abi);
-            var contractInstance = MyContract.new(self.playlistname,{
+            //var contractInstance = 
+            MyContract.new(self.playlistname,{
               from: self.fixaddress(self.account),
               gasPrice: gasPrice,
               gasLimit: 3000000,
@@ -80,30 +81,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                 // e.g. check tx hash on the first call (transaction send)
                 if (!myContract.address) {
-                  console.log("Your playlist contract has been deployed to the Ethereum network. Transaction hash is", myContract.transactionHash);
+                  console.log('Your playlist contract has been deployed to the Ethereum network. Transaction hash is', myContract.transactionHash);
                   self.txhash = myContract.transactionHash;
-                  console.log("Wait a new moments while we mine it. You will receive your address when it is mined.");
+                  console.log('Wait a new moments while we mine it. You will receive your address when it is mined.');
                   //self.showtoast("Here's the TX hash: " + self.txhash);
-                  self.fire('add-toast', { msg: "Here's the TX hash: " + self.txhash });
+                  self.fire('add-toast', { msg: 'Here\'s the TX hash: ' + self.txhash });
 
                   // check address on the second call (contract deployed)
                 } else {
-                  console.log("Your playlist contract has been deployed. Your contract address is", myContract.address);
+                  console.log('Your playlist contract has been deployed. Your contract address is', myContract.address);
                   self.contractaddress = myContract.address;
                   //self.showtoast("Contract deployed: " + self.contractaddress);
-                  self.fire('add-toast', { msg: "Contract deployed: " + self.contractaddress });
+                  self.fire('add-toast', { msg: 'Contract deployed: ' + self.contractaddress });
                   fn(self.contractaddress);
                 }
               } else {
                 console.log('error:', err);
                 //self.showtoast("Error: " + err);
-                self.fire('add-toast', { msg: "Error." });
+                self.fire('add-toast', { msg: 'Error.' });
               }
             });
           });
 
         }, function(e) {
-          console.log('ERROR!');
+          console.log('ERROR!',e);
         });
 
       },
