new playlist gets stored in localstorage

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -14,6 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-icons/av-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html">
 
 <!-- Sponnet elements -->
 <link rel="import" href="../bower_components/web3-wallet/web3-wallet.html">
