--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
               <stube-item hash="QmTAJAzi8pVvT85242vjVWVySzGxM9jU3cKU4ekr8Zov1M"></stube-item>
               <stube-item hash="QmPT24oYhupjJ41iaPrL4JC2RnRuRPHu6F4RkteZYh7Dys"></stube-item>
-             
+              <!-- <stube-item hash="QmWFg3yzoaNPY9Kkaoku1kmqGfBZrwCJVqWqJzxfMkPKr4"></stube-item> -->
+
+
 <!-- 
               <stube-item></stube-item>
               <stube-item></stube-item>
