--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -55,3 +55,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="stube-playlist/stube-playlist.html">
 <link rel="import" href="stube-newplaylist/stube-newplaylist.html">
 <link rel="import" href="stube-user/stube-user.html">
+<link rel="import" href="stube-upload/stube-upload.html">
