--- a/app/elements/stube-upload/stube-upload.html
+++ b/app/elements/stube-upload/stube-upload.html
@@ -35,6 +35,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           type: Object,
           observer: '_web3'
         }
+      },
+
+      upload: function(){
+        // Yeah man, create the object and upload it!
+        
       }
     });
   })();
